Prevent horizontal overflow on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ footer {
 }
 
 .dropdown-and-table {
-    display: inline-block;
+    display: block;
     margin-left: 2rem;
     margin-right: 2rem;
 }
